<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cerca.CercaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <NumberPicker
            android:id="@+id/numberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="136dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchDisabiliFilter">

        </NumberPicker>

        <EditText
            android:id="@+id/editTextCercaNomeItinerario"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/text_field_custom"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingEnd="12sp"
            android:paddingStart="12sp"
            android:hint="@string/label_cerca_itinerario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupDifficulSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switchDisabiliFilter"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFiltri"
            app:layout_constraintVertical_bias="0.16000003">

            <RadioButton
                android:id="@+id/radioButtonTuristicoFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/label_radio_button_turistico" />

            <RadioButton
                android:id="@+id/radioButtonEscursionisticoFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_escursionistico" />

            <RadioButton
                android:id="@+id/radioButtonEspertiFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_esperti" />

            <RadioButton
                android:id="@+id/radioButtonEscursionistiAttrezzatiFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_esperti_attrezzati" />

            <RadioButton
                android:id="@+id/radioButtonInnevatoFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_radio_button_innevato" />
        </RadioGroup>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchDisabiliFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="16dp"
            android:minHeight="48dp"
            android:text="@string/label_servizi_disabili"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFiltri" />

        <TextView
            android:id="@+id/textViewFiltri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/label_filtri"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCercaNomeItinerario" />

        <Button
            android:id="@+id/cercaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:text="@string/label_cerca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>