<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.segnalazione.SegnalazioneActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/TitoloSegnalazioneEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@drawable/text_field_custom"
                android:textCursorDrawable="@drawable/cursor_custom"
                android:ems="10"
                android:hint="@string/titolo_segnalazione_text"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/DescrizioneSegnalazioneEditText"
                android:layout_width="209dp"
                android:layout_height="94dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/text_field_custom"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textCursorDrawable="@drawable/cursor_custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescrizioneSegnalazioneTextView" />

            <TextView
                android:id="@+id/DescrizioneSegnalazioneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/descrizione_segnalazione_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.316"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitoloSegnalazioneEditText" />

            <RadioGroup
                android:id="@+id/MotivazioneSegnalazioneRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MotivazioneTextView">

                <RadioButton
                    android:id="@+id/InfoNonAggiornateRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informazioni_non_aggiornate_radio_button"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/InfoInesatteRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informazioni_inesatte_radio_button"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/AltroRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/altro_radio_button"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/MotivazioneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/motivazione_segnalazione_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.319"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DescrizioneSegnalazioneEditText" />

            <Button
                android:id="@+id/InviaSegnalazioneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/text_field_custom"
                android:text="@string/invia_segnalazione_button"
                android:textColor="#212121"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MotivazioneSegnalazioneRadioGroup"
                app:layout_constraintVertical_bias="0.19" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>